--- a/과제1(Jeyoung Song)/css/sub.css
+++ b/과제1(Jeyoung Song)/css/sub.css
@@ -33,7 +33,7 @@ img:hover {
 /* 전체 레이아웃 */
 #wrap {
   width: 100%;
-  min-width: 1400px;
+  min-width: 1100px;
 }
 /* header */
 #wrap header {
@@ -153,21 +153,23 @@ img:hover {
   background: url("../images/sub/sub_visual-6.jpg") center/cover;
 }
 
-
 /* 서브 하단 글자 스타일 */
 
 #wrap section .text {
-  width: 1400px;
+  width: 1100px;
   margin: 0 auto;
 }
 
 #wrap section .text h2 {
+  margin-top:100px;
   padding: 40px 0 40px 0;
   margin-bottom: 50px;
   font-size: 30px;
   color: #004C98;
   border-bottom: 1px solid #ddd; /* 글자 하단에 회색 라인 지정 */
 }
+
+#wrap section .text img {width:300px; margin-top:100px;}
 
 #wrap section .text p.title {
   color: #0172bb;
